--- a/files/static/css/my.css
+++ b/files/static/css/my.css
@@ -19,6 +19,7 @@ button,
 input,
 select,
 textarea,
+a,
 br {
   color: black;
   font-family: 'Ubuntu', Arial, sans-serif;
@@ -60,8 +61,18 @@ strong {
   width:100%;
 }
 
-.nav-item{
-  margin:0;
+.navbar-light .navbar-nav .nav-link{
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.nav-link {
+    display: inline;
+}
+
+.navbar-custom {
+    background-color: rgba(54,88,128,0.38);
 }
 
 /*-------------------------------------------
@@ -120,7 +131,21 @@ th {
 }
 
 .col-margin{
-    margin: 5px
+
+    vertical-align: center;
+}
+
+.thumbimage{
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    z-index: 4;
+    box-shadow: 0px 5px 50px 0px rgba(19, 127, 212, 0.4), 0px 0px 0px 7px #a9babb;
+
 }
 
 /*-------------------------------------------
