--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load sass_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css"/>
     <link href="{% static 'css/my.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% sass_src 'scss/style.scss' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/fontawesome.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/pretty-checkbox.min.css' %}" rel="stylesheet" type="text/css">
 
@@ -47,9 +49,7 @@
     <!-- HEADER START -->
 
     <div class="">
-
-
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="nav navbar navbar-light navbar-expand navbar-custom">
             <!-- Button for next div -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
 
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link " href="">Αρχική<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Αρχική</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Πληροφορίες</a></li>
                 </ul>
 
@@ -68,7 +68,7 @@
                               {{ user }}
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="">Νέο Αρχείο</a>
+                                <a class="dropdown-item " href="">Νέο Αρχείο</a>
                                 <a class="dropdown-item" href="">Τα αρχεία μου</a>
                                 <a class="dropdown-item" href="">Διαχείρηση</a>
                                 <a href="{% url 'logout' %}" class="dropdown-item" >Αποσύνδεση</a>
