--- a/files/templates/files/home.html
+++ b/files/templates/files/home.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Αρχική{% endblock %}
 
 {% block content %}
 
-<div class="container card">
+<div class="card">
 
     <h2 class="card-header">
         Καλώς ήρθατε
