--- a/files/templates/files/file_list.html
+++ b/files/templates/files/file_list.html
@@ -64,8 +64,8 @@
 
                     <div class="card">
                         <a class="card-header" href="{% url 'file_detail' file.slug %}"><h5>{{ file }}</h5></a>
-                        <div class="card-body">
-                            <div class="row">
+                        <div class="card-body border border-primary">
+                            <div class="row border border-success">
                                 <div class="col-2 my-auto">
 
                                         <img class="thumbimage"
@@ -76,7 +76,6 @@
                                             {% endif %}
                                     alt="File thumbnail" style=""
                                     />
-
 
                                 </div>
                                 <div class="col my-auto">
