--- a/files/static/css/my.css
+++ b/files/static/css/my.css
@@ -116,10 +116,11 @@ th {
 
 .card {
     border: 1px solid;
+    height: 100%;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 10px;
-    min-height: 180px;
+
     width: 94%;
     float: right;
 }
@@ -136,8 +137,8 @@ th {
 }
 
 .thumbimage{
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 50%;
