--- a/files/templates/files/file_list.html
+++ b/files/templates/files/file_list.html
@@ -89,7 +89,7 @@
 
                                 </div>
                                 <div class="col my-auto text-left">
-                                    <p><a class="card-semi-title my-auto" style="color: #007489;" >Κατηγορία:</a><i> {{ file.category.name }}</i></p>
+                                    <p><a class="card-semi-title my-auto" style="color: #007489;" >Κατηγορία:</a><i> {{ file.category }}</i></p>
                                     <p><a class="card-semi-title" style="color: #007489;">Επιστημονικές Περιοχές:</a>
                                         {% for area in file.area.all %}
                                             <i> {{ area }}</i> {% if not forloop.last %},{% endif %}
