--- a/files/static/css/my.css
+++ b/files/static/css/my.css
@@ -47,6 +47,7 @@ h3 {
 p {
   margin-bottom: 1.5em;
   /*color: #898989;*/
+    font-size: 16px;
 }
 
 b,
@@ -62,9 +63,10 @@ strong {
 }
 
 .navbar-light .navbar-nav .nav-link{
-    color: black;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
     font-weight: bold;
+
 }
 
 .nav-link {
@@ -73,6 +75,8 @@ strong {
 
 .navbar-custom {
     background-color: rgba(54,88,128,0.38);
+
+    padding: 20px;
 }
 
 /*-------------------------------------------
@@ -109,12 +113,194 @@ th {
   margin-top: 10rem;
 }
 
+.greeter{
+    margin-top: 25px;
+}
+
+.home-content{
+    background-color: white;
+    margin: 30px 0px 30px 0px;
+    padding-bottom: 10px;
+    padding-top: 20px;
+}
+
+
+
+
+/*.card-area{*/
+/*    !* Add shadows to create the "card" effect *!*/
+/*    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
+/*    transition: 0.3s;*/
+
+/*    position: relative;*/
+/*    z-index: 1;*/
+/*    display: block;*/
+
+/*}*/
+
+.grid {
+    list-style: none;
+	text-align: center;
+    position: relative;
+	clear: both;
+    margin: auto;
+}
+
+/* Common style */
+.grid figure {
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
+
+	overflow: hidden;
+    height: 250px;
+    min-height: 200px;
+    max-height: 4000px;
+	width: 100%;
+
+	background: #3085a3;
+	text-align: center;
+	cursor: pointer;
+
+}
+
+.grid figure img {
+	position: relative;
+	display: block;
+	min-height: 100%;
+	max-width: 100%;
+	opacity: 1;
+}
+
+.grid figure figcaption {
+	padding: 2em;
+	color: #fff;
+    text-shadow: 0 1px 0 black;
+	font-size: 1.25em;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+    text-align: center;
+    display: inline;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+}
+
+.grid figure figcaption::before,
+.grid figure figcaption::after {
+	pointer-events: none;
+}
+
+.grid figure figcaption,
+.grid figure figcaption > a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+    text-align: center;
+}
+
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+.grid figure figcaption > a {
+	z-index: 1000;
+	text-indent: 200%;
+	white-space: nowrap;
+	font-size: 0;
+	opacity: 0;
+    text-align: center;
+}
+
+.grid figure h2 {
+    border: black 2px solid;
+	font-weight: 200;
+    font-size: 22px;
+    text-align: center;
+    padding: 3px;
+    background: rgba(0, 0, 0, 0.5);
+
+
+}
+
+.grid figure h2 span {
+	font-weight: 800;
+    text-align: center;
+}
+
+.grid figure h2,
+.grid figure p {
+	margin: auto;
+    text-align: center;
+}
+
+.grid figure p {
+	font-size: 65%;
+    text-align: center;
+}
+
+figure.effect-goliath {
+	background: #007489;
+}
+
+figure.effect-goliath img,
+figure.effect-goliath h2 {
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+}
+
+figure.effect-goliath img {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+figure.effect-goliath h2,
+figure.effect-goliath p {
+	position: absolute;
+	bottom: 0;
+    left:0;
+	margin-bottom: 16px;
+}
+
+figure.effect-goliath p {
+	text-transform: none;
+    right: 0;
+    text-align: left;
+	font-size: 100%;
+	opacity: 0;
+    margin-bottom: 50px;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(0,50px,0);
+	transform: translate3d(0,50px,0);
+}
+
+figure.effect-goliath:hover img {
+	-webkit-transform: translate3d(0,-80px,0);
+	transform: translate3d(0,-80px,0);
+}
+
+figure.effect-goliath:hover h2 {
+	-webkit-transform: translate3d(0,-100px,0);
+	transform: translate3d(0,-100px,0);
+}
+
+figure.effect-goliath:hover p {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
+
+
+
+.home-card {
+
+}
+
 
 /*-------------------------------------------
                     FILE CARDS
 ---------------------------------------------*/
 
-.card {
+#card {
     border: 1px solid;
     height: 100%;
     text-align: center;
