--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -16,8 +16,12 @@
     <link href="{% sass_src 'scss/style.scss' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/fontawesome.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/pretty-checkbox.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/autoSuggest.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+
 
     <link rel="stylesheet" href="{% static 'css/proton/style.css' %}" />
+
 
 {#    <link href="{% static 'css/new.css' %}" rel="stylesheet" type="text/css">#}
 {#    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel=“stylesheet”>#}
@@ -55,23 +59,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            <div class="collapse navbar-collapse" id="navbarResponsive" style="cursor: pointer">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Αρχική</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">Πληροφορίες</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}"><i class="fas fa-home"></i> Αρχική</a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><i class="fas fa-info-circle"></i> Πληροφορίες</a></li>
                 </ul>
 
                 {% if user.is_authenticated %}
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              {{ user }}
+                              {{ user }} <i class="fas fa-user"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item " href="">Νέο Αρχείο</a>
-                                <a class="dropdown-item" href="">Τα αρχεία μου</a>
-                                <a class="dropdown-item" href="">Διαχείρηση</a>
-                                <a href="{% url 'logout' %}" class="dropdown-item" >Αποσύνδεση</a>
+                                <a class="dropdown-item " href="">Νέο Αρχείο <i class="fas fa-plus-circle fa-2x"></i></a>
+                                <a class="dropdown-item" href="">Τα αρχεία μου <i class="fas fa-server fa-2x"></i></a>
+                                <a class="dropdown-item" href="">Διαχείρηση <i class="fas fa-user-cog fa-2x"></i></a>
+                                <a href="{% url 'logout' %}" class="dropdown-item" >Αποσύνδεση <i class="fas fa-sign-out-alt fa-2x"></i></a>
                             </div>
                         </li>
                     </ul>
@@ -122,6 +126,8 @@
     <script src={% static "js/jquery.bootstrap.modal.forms.js" %}></script>
     <script defer src="{% static 'js/solid.js' %}"></script>
     <script defer src="{% static 'js/fontawesome.js' %}"></script>
+    <script defer src="{% static 'js/jquery.autoSuggest.minified.js' %}"></script>
+    <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
 
     <script type="text/javascript">
     $(document).ready(function() {
