--- a/files/static/css/my.css
+++ b/files/static/css/my.css
@@ -11,6 +11,13 @@ body {
   min-height: 100vh;
 }
 
+.center{
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
+  text-align: center;
+}
+
 /*--------------------------------------------------------------
 Typography
 --------------------------------------------------------------*/
@@ -119,24 +126,10 @@ th {
 
 .home-content{
     background-color: white;
-    margin: 30px 0px 30px 0px;
+    margin: 20px 0px 20px 0px;
     padding-bottom: 10px;
     padding-top: 20px;
 }
-
-
-
-
-/*.card-area{*/
-/*    !* Add shadows to create the "card" effect *!*/
-/*    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
-/*    transition: 0.3s;*/
-
-/*    position: relative;*/
-/*    z-index: 1;*/
-/*    display: block;*/
-
-/*}*/
 
 .grid {
     list-style: none;
@@ -148,10 +141,10 @@ th {
 
 /* Common style */
 .grid figure {
-    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 15px 0 rgba(0,0,0,0.2);
 
 	overflow: hidden;
-    height: 250px;
+    height: 200px;
     min-height: 200px;
     max-height: 4000px;
 	width: 100%;
@@ -159,6 +152,7 @@ th {
 	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
+
 
 }
 
@@ -290,12 +284,6 @@ figure.effect-goliath:hover p {
 
 
 
-
-.home-card {
-
-}
-
-
 /*-------------------------------------------
                     FILE CARDS
 ---------------------------------------------*/
@@ -306,10 +294,11 @@ figure.effect-goliath:hover p {
     text-align: center;
     margin-top: 0px;
     margin-bottom: 10px;
-
     width: 94%;
     float: right;
 }
+
+
 
 .card-semi-title {
     color: #0c5460;
@@ -318,7 +307,6 @@ figure.effect-goliath:hover p {
 }
 
 .col-margin{
-
     vertical-align: center;
 }
 
