--- a/files/static/scss/style.scss
+++ b/files/static/scss/style.scss
@@ -104,13 +104,14 @@ a, a:hover {
     padding-left: 10px;
     padding-right: 10px;
     border: black solid;
+    padding-bottom: 20px;
   }
 
   &__name {
     font-weight: 700;
     font-size: 24px;
     color: black;
-    margin-top: -30px;
+    margin-top: -50px;
     margin-bottom: 20px;
   }
 
