--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -72,7 +72,7 @@
                               {{ user }} <i class="fas fa-user"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item " href="">Νέο Αρχείο <i class="fas fa-plus-circle fa-2x"></i></a>
+                                <a class="dropdown-item " href="{% url 'file_add' %}">Νέο Αρχείο <i class="fas fa-plus-circle fa-2x"></i></a>
                                 <a class="dropdown-item" href="">Τα αρχεία μου <i class="fas fa-server fa-2x"></i></a>
                                 <a class="dropdown-item" href="">Διαχείρηση <i class="fas fa-user-cog fa-2x"></i></a>
                                 <a href="{% url 'logout' %}" class="dropdown-item" >Αποσύνδεση <i class="fas fa-sign-out-alt fa-2x"></i></a>
