finished uploading so long

--- a/files/templates/files/file_add.html
+++ b/files/templates/files/file_add.html
@@ -95,8 +95,8 @@
             </select>
 
              <div class="profile-card-ctr">
-                 <button type="reset" class="profile-card__button button--gray">Άκυρο</button>
-                 <button type="submit" class="profile-card__button button--blue js-message-btn">Προσθήκη</button>
+                 <button type="reset" onClick="window.location='{% url 'list_files' %}'" class="profile-card__button button--gray">Άκυρο</button>
+                 <button type="submit" class="profile-card__button button--blue js-message-btn float-right">Προσθήκη</button>
              </div>
 
 
