--- a/files/static/css/my.css
+++ b/files/static/css/my.css
@@ -295,7 +295,8 @@ figure.effect-goliath:hover p {
     text-align: center;
     margin-top: 0px;
     margin-bottom: 10px;
-    width: 94%;
+    width: 100%;
+    margin-left: 50px;
     float: right;
 }
 
