--- a/files/templates/files/file_list.html
+++ b/files/templates/files/file_list.html
@@ -58,58 +58,13 @@
 
 
             <!-- FILE LIST -->
-            <div class="col-8 float-right">
-            <div id="list">
-                {% for file in file_list %}
-
-                    <div class="card" id="card">
-                        <a class="card-header" href="{% url 'file_detail' file.slug %}"><h5>{{ file }}</h5></a>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-2 center">
-                                        <img class="thumbimage"
-                                            {% if file.thumbnail.url %}
-                                                src="{{ file.thumbnail.url }}"
-                                            {% else %}
-                                                src="{% static 'images/no_thumbnail.png' %}"
-                                            {% endif %}
-                                    alt="File thumbnail"/>
-                                </div>
-                                <div class="col center">
-                                    <div class="row card-semi-title">
-                                        Περιγραφή:
-                                        <p></p>
-                                    </div>
-                                    <div class="row col-margin text-justify align-middle">
-                                        {{ file.summary|truncatechars:250 }}
-                                    </div>
-
-                                </div>
-                                <hr/>
-                                <div class="col center text-left">
-                                    <p><a class="card-semi-title" style="color: #007489;" >Κατηγορία:</a><i> {{ file.category }}</i></p>
-                                    <p><a class="card-semi-title" style="color: #007489;">Επιστημονικές Περιοχές:</a>
-                                        {% for area in file.area.all %}
-                                            <i> {{ area }}</i> {% if not forloop.last %},{% endif %}
-                                        {% endfor %}
-                                    </p>
-                                    <div><a class="card-semi-title" style="color: #007489;">Ετικέτες:</a>
-                                        {% for tag in file.tags.all %}
-                                            <i> {{ tag }}</i> {% if not forloop.last %},{% endif %}
-                                        {% endfor %}
-                                        </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
+            <div  class="col-8">
+                <div id="list"></div>
 
 
 
             </div>
-        <div id="paginator"></div>
+
 
 
 
@@ -121,7 +76,8 @@
 {% endblock %}
 
 {% block extrascripts %}
+    {{ block.super }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
     <script id="myscript" src="{% static 'js/my.js' %}" caturl="{% url 'cat_ajax_tree' %}" areaurl="{% url 'area_ajax_tree' %}"></script>
-    <script src="{% static 'js/pagination.js' %}"></script>
+
 {% endblock %}
